Closed Bug 1899646 Opened 1 year ago Closed 1 year ago

Netflix error 7353 for clearlead video

Categories

(Core :: Audio/Video, defect, P1)

defect

Tracking

()

RESOLVED FIXED
128 Branch
Tracking Status
firefox128 --- fixed

People

(Reporter: alwu, Assigned: alwu)

References

Details

Attachments

(1 file, 1 obsolete file)

We received a report about rising error 7353 when watching clearlead video on Netflix, here is the profiled result. It seems that when recreating a MDSM, the newly created MDSM wasn't recovered to correct status. It was still trying to access data from 0s, but the video buffered range didn't contain that part of data anymore.

This reverts the change from D203062, which causes the newly created
MSDM not doing a proper recovery.

once.

According to the spec [1], the loadedmetadata should only be
dispatched once.

[1] https://html.spec.whatwg.org/multipage/media.html#event-media-loadedmetadata

Depends on D212064

Attachment #9404671 - Attachment description: Bug 1899646 - part2 : event 'loadmetadata' should only be dispatched → Bug 1899646 - part2 : event 'loadmetadata' should only be dispatched once.
Attachment #9404671 - Attachment is obsolete: true
Attachment #9404670 - Attachment description: Bug 1899646 - part1 : properly recover the status for a newly created state machine. → Bug 1899646 - properly recover the status for a newly created state machine.
Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/862edb2a0505 properly recover the status for a newly created state machine. r=media-playback-reviewers,padenot
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
Regressions: 1901483
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: