Bug 1899646 - properly recover the status for a newly created state machine. r=media-playback-reviewers,padenot

In bug 1885959 we've changed the way of determining a media engine
playback, so we can revert the change from D203062, which causes the
newly created MSDM not doing a proper recovery.

Differential Revision: https://phabricator.services.mozilla.com/D212064